tdf#70960 sw::UndoManager: fix exponential Repeat proliferation

In case of a multi-selection, the usual pattern is that the EditShell
contains a loop around GetCursor()->GetRingContainer() that creates N
"groups" of undo-actions, all of which are inside a SfxListUndoAction.

If that is then repeated again with a multi-selection, the result will
be N*N actions, etc.  This is usually not an issue because most
repeatable actions are idempotent - except for the resource usage.

Prevent the 2nd step of the proliferation by introducing a flag in
SwUndo to do nothing in SwUndo::Repeat() that is set for all but the
1st cursor of the multi-selection in sw::UndoManager::Repeat().

(presumably regression from CWS undoapi)

Change-Id: I095258f6d57af6bcaa8a39747632422e8311e694